// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text default render 1`] = `
.c0 {
  font-family: sans-serif;
  font-weight: normal;
  font-size: 16px;
  display: block;
}

<div
  className="c0"
>
  Some text
</div>
`;

exports[`Text font 1 bold 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 600;
  font-size: 16px;
  display: block;
}

<div
  className="c0"
>
  Some text
</div>
`;

exports[`Text font 1 normal 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 400;
  font-size: 16px;
  display: block;
}

<div
  className="c0"
>
  Some text
</div>
`;

exports[`Text font 2 bold 1`] = `
.c0 {
  font-family: 'Lato',sans-serif;
  font-weight: 700;
  font-size: 16px;
  display: block;
}

<div
  className="c0"
>
  Some text
</div>
`;

exports[`Text font 2 normal 1`] = `
.c0 {
  font-family: 'Lato',sans-serif;
  font-weight: 400;
  font-size: 16px;
  display: block;
}

<div
  className="c0"
>
  Some text
</div>
`;
